# Tesla-Dashcam-Telemetry-Viewer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.py  data_handler.py  desktop_ui.py  main.py  overlay_renderer.py  project.py  pyproject.toml  requirements.txt  sei_extractor.py  shapes.py  utils.py  video_processor.py
.github/workflows/: macos-app.yml  package.yml  release.yml  tests.yml  windows-app.yml
docs/: packaging.md
modules/: __init__.py  app_service.py  config.py  data_handler.py  get_state.py  layouts.py  overlay_renderer.py  sei_extractor.py  settings.py  shapes.py  ui_helpers.py  video_processor.py
packaging/: TeslaCamTelemetry-macOS.spec
scripts/: build_macos.sh
tests/: test_app_service.py  test_cli.py  test_data_handler.py  test_desktop_ui.py  test_get_state.py  test_layouts.py  test_sei_extractor.py  test_shapes.py  test_ui_helpers.py
utils/: __init__.py
